# turl

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
src/: app.rs  application.rs  event.rs  event_handler.rs  history.rs  image.txt  main.rs  ui.rs  utils.rs  widgets.rs
src/application/: app.rs  history.rs  request_data.rs  response_data.rs  ui_state.rs
src/event/: body.rs  event_handler.rs  headers.rs  method.rs  params.rs  popup.rs  response_body.rs  response_headers.rs  url.rs
src/widgets/: body.rs  footer.rs  headers.rs  method.rs  params.rs  popup.rs  response.rs  response_body.rs  response_headers.rs  ui.rs  url.rs
